# invoice-ocr-ai

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
invoice_ocr/: api.py  hooks.py  modules.txt
invoice_ocr/ai/: confidence.py  ocr_nodes.py  prompts.py
invoice_ocr/intelligence/: financial_validator.py  line_classifier.py
invoice_ocr/invoice_ocr/doctype/deepinfra_settings/: deepinfra_settings.js  deepinfra_settings.json
invoice_ocr/invoice_ocr/doctype/invoice_ocr/: invoice_ocr.json
invoice_ocr/public/js/: invoice_ocr.js
invoice_ocr/vision/: ocr_engine.py
zikpro_invoice_ocr/: api.py  hooks.py
zikpro_invoice_ocr/zikpro_invoice_ocr/doctype/supplier_ai_profile/: supplier_ai_profile.json
